--- a/Fiap.Web.Alunos.csproj
+++ b/Fiap.Web.Alunos.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Oracle.EntityFrameworkCore" Version="8.23.50" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Fiap.Web.Alunos.Teste\Fiap.Web.Alunos.Teste.csproj" />
+  </ItemGroup>
+
 </Project>
